@@ -1,3 +1,7 @@
+2004-12-01 Mikhail Khodjaiants
+	Fix for bug 74043: Overaggressive exception reporting?
+	* CBreakpointManager.java
+
 2004-11-26 Mikhail Khodjaiants
 	Fix for bug 79608: NPE in CValue.
 	* CValue.java
